--- a/contact.css
+++ b/contact.css
@@ -386,6 +386,10 @@
             font-weight: 600;
             margin-bottom: 10px;
         }
+
+        .addressofcomp{
+            color:#000000
+        }
         
         @media (max-width: 768px) {
             .contact-container {
