--- a/styles.css
+++ b/styles.css
@@ -2200,7 +2200,7 @@ body {
 .company-name {
     font-weight: 600;
     margin-bottom: 10px;
-    color: #000
+    color: #ffffff
 }
 
 .info-container,
