--- a/style.css
+++ b/style.css
@@ -3222,7 +3222,7 @@ body {
 .company-name {
     font-weight: 600;
     margin-bottom: 10px;
-    color: #000000;
+    color: #ffffff;
 }
 
 @media (max-width: 768px) {
